--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,31 @@
 #start {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  background-color: #cccccc;
+}
+
+#start #gameStart {
+  border: 2px solid black;
+  background-color: #191919;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 10px 18px;
+  cursor: pointer;
+}
+#start #gameStart:hover {
+  background-color: #323232;
+}
+#start #gameStart:active {
+  background-color: #000000;
 }
 
 #game {
@@ -57,6 +79,7 @@
 #playerActions {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 #playerSpells {
@@ -64,8 +87,37 @@
   flex-direction: column;
 }
 
+#playerSpells .spell {
+  margin-bottom: 10px;
+}
+
 #battlefield {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  min-height: 200px;
+}
+
+#manaStoneContainer {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#manaStoneContainer #manaStone {
+  display: block;
+  border: 2px solid blue;
+  background-color: rgba(0, 0, 255, 0.5);
+  margin: 0px auto;
+  border-radius: 50%;
+  width: 100px;
+  aspect-ratio: 1;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+#manaStoneContainer #manaStone:hover {
+  background-color: rgba(0, 0, 255, 0.75);
+}
+#manaStoneContainer #manaStone:active {
+  background-color: rgba(0, 0, 255, 0.25);
 }
